# pico-embedded

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  pico-embedded.code-workspace  readme.md
cli/: CMakeLists.txt  MyI2cSlave.cpp  MyI2cSlave.hpp  cli.c  cli_main.c  i2c_slave.c  i2c_slave.h  srs_sim.c  srs_sim.h
common/: CliModule.cpp  CliModule.h  MainClass.cpp  MainClass.h  Module.cpp  Module.h  UartBase.cpp  UartBase.h  cli.h
doc/: build-cmdline.md  debug-vsc.md
obcstubs/: CMakeLists.txt  main.c
obcstubs/mod/: LedControl.cpp  LedControl.h  SrsStub.cpp  SrsStub.h  UartProxy.cpp  UartProxy.h  Usb.cpp  Usb.h
obcstubs/usb/: tusb_config.h  usb-descriptors.c
wlan/: CMakeLists.txt  wlan_main.c
